# MT5Services

./: .env.example  .flake8  .gitattributes  .gitignore  .gitignore-simple  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONFIG_GUIDE.md  ENHANCEMENTS_README.md  EXECUTION_FLOW_AND_DATAFLOW.md  INSTALLATION.md  LIVE_READINESS_EXECUTION_CHECKLIST.md  PLAN.md  QUICK_START.md  README.md  TODO.md  app.py  check_git_ignore.py  debug_dependency.py  demo_config_driven.py  install_dependencies.py  migrate_config.py  pyproject.toml  requirements-enhanced.txt  requirements-updated.txt  requirements.txt  run_enhanced.py  run_simple.py  test_api_integration.py  test_config_centralization.py  test_config_system.py  test_data_layer.py  test_enhancements.py  test_final_integration.py  test_indicator_usage.py  test_indicator_v2.py  test_indicator_v2_simple.py  test_indicator_v2_stage2.py  test_launch.py  (+3 more)
.ai/: MT5Services_optimization_plan.md  codex-report.md  plan.md  plan_calendar.md  plan_full.md  plan_optimization.md  plan_signal.md  review.md
.claude/: settings.json
.claude/commands/: add-indicator.md  add-strategy.md  fix.md  lint.md  test.md  typecheck.md
artifacts/: phase0_state_edge_h1_baseline.json
config/: app.ini  backtest.ini  cache.ini  composites.json  db.ini  economic.ini  entry_policy.ini  exit.ini  indicators.ini  indicators.json  indicators_v2.json  ingest.ini  market.ini  market.local.ini.example  mt5.ini  notifications.ini  notifications.local.ini.example  paper_trading.ini  research.ini  risk.ini  signal.ini  storage.ini  topology.ini
config/instances/: README.md
docs/: README.md  architecture-flow.md  architecture.md  code_review_main_2026-03-17.md  codebase-review.md  design-htf-indicator-cache.md  pending-entry-design.md  quantx-backend-backlog.md  research-system.md  signal-system.md  signal_engineering_next_steps_2026-03-19.md  signal_pipeline_audit_2026-03-19.md
docs/architecture/: current-runtime-map.md  data-flow.md  module-boundaries.md  module-layout.md  overview.md  signal-system.md
docs/design/: adr.md  backtest-vs-live-divergence.md  development-todo.md  entrypoint-map.md  full-runtime-dataflow.md  high-risk-remediation-milestones.md  intrabar-data-flow.md  modular-audit-signals-indicators-trading.md  next-plan.md  notifications.md  observability-enhancement.md  pending-entry.md  position-state-consistency.md  quantx-canonical-ia.md  quantx-data-freshness-tiering.md  quantx-trade-state-stream.md  r-based-exit-plan.md  r-based-position-management.md  risk-enhancement.md  signals-dataflow-overview.md  strategy-capability-scope-aware-indicators.md
docs/refactor/: deps-split-plan.md  live-backtest-unification-plan.md
docs/research/: 2026-04-17-sell-rules-as-exit-signals.md  2026-04-18-mining-vs-backtest-gap.md  2026-04-19-h1-p7-baseline.md  2026-04-20-tf-baseline-review.md  2026-04-22-highfreq-mining-results.md  2026-04-23-mining-gap-audit.md  2026-04-25-comprehensive-mining-round.md  2026-04-27-fresh-mining-and-validation-plan.md  2026-04-29-mined-rule-verification-pipeline.md  2026-04-30-day-trading-edge-strategies.md  2026-05-03-high-freq-architecture-audit.md
docs/runbooks/: demo-restart.md  system-startup-and-live-canary.md
docs/sop/: feature-to-indicator-promotion.md
examples/: unified_manager_integration.py
repo_index/: ARCHITECTURE.md  DEPENDENCIES.md  FILE_MAP.md  LAST_ANALYSIS.json  PROJECT_INDEX.md
scripts/: backfill_ohlc.py  reset_database.py
src/: config_fallback.py
src/api/: __init__.py  account.py  action_contracts.py  admin.py  admin_schemas.py  app_enhanced.py  app_simple.py  backtest.py  cockpit.py  decision.py  deps.py  deps_enhanced.py  deps_simple.py  economic.py  error_codes.py  (+16 more)
tools/: aggression_search.py  backfill_ohlc.py  backtest_runner.py  confidence_check.py  correlation_runner.py  diagnose_no_trades.py  exit_experiment.py  live_preflight.py  mining_runner.py  reset_database.py  sltp_grid_search.py  walkforward_runner.py
(+1280 files in other folders)
